--- a/data_config.json
+++ b/data_config.json
@@ -50,7 +50,7 @@
   "Pt": [5, 10, 10, 10, 10, 10, 10, 10, 10],
   "Ta": [5, 10, 10, 10, 10, 10, 10, 10, 10],
   "Na": [4, 4, 90, 90, 90, 90, 90, 90],
-  "server":
+  "SERVER":
   "172.17.80.1",
   "URL":
   "http://127.0.0.1:4000/graphql",
@@ -65,6 +65,5 @@
   "INFO":
   1,
   "DEBUG":
-0
-
+  0
 }
