fix bugs, now works as server.

--- a/data_config.json
+++ b/data_config.json
@@ -11,6 +11,7 @@
   "SMOKE_AND_LEAKAGE": 6,
   "LEAKAGE": 7,
   "ANOMALY": 9,
+  "anomaly_reduce": 100,
   "TRAINING": [
     10,
     11,
@@ -43,7 +44,7 @@
   "Ar_x_end": [1, 1, 1, 1, 1, 1, 1, 1, 1],
   "Ar_y_start": [0, 0, 0, 0, 0, 0, 0, 0, 0],
   "Ar_y_end": [1, 1, 1, 1, 1, 1, 1, 1, 1],
-  "Ir": [0.75, 0.75, 0.75, 0.75, 0.75, 0.75, 0.75, 0.75, 0.75],
+  "Ir": 0.75,
   "Ti": [240, 240, 240, 240, 240, 240, 240, 240, 240],
   "Hmax": [0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5],
   "Hmin": [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
